<resources>
    <string name="app_name">PawCheck</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--String for Home Page-->
    <string name="new_article">Artikel Terbaru</string>
    <string name="article_name">Article Name</string>
    <string name="article_description">Article Description</string>
    <string name="article_image_desc">Image of the article</string>
    <string name="article_title_desc">Title of the article</string>
    <string name="article_description_desc">Brief description of the article</string>
    <string name="tema_artikel">Tema Artikel</string>
    <string name="scan_your_pet">Periksa Hewan Kamu!</string>
    <string name="scan_here">Pindai Disini</string>

    <!--String for Login Page-->
    <string name="text_login">Login</string>
    <string name="text_welcome_back">Welcome Back</string>
    <string name="text_sign_in_to_your_account">Sign in to your account</string>
    <string name="icon_account">account</string>
    <string name="username_or_email">Username or Email</string>
    <string name="icon_password">password</string>
    <string name="password">Password</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="forget_password">Forget Password?</string>
    <string name="btn_login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="google_button">Google Button</string>
    <string name="apple_button">Apple Button</string>
    <string name="facebook_button">Facebook Button</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <!--String for Register Page-->
    <string name="text_register">Register</string>
    <string name="text_create_your_account">Create your account</string>
    <string name="icon_email">email</string>
    <string name="email">Email</string>
    <string name="icon_username">username</string>
    <string name="create_name">Create Name</string>
    <string name="icon_create_password">Create password</string>
    <string name="create_password">Create Password</string>
    <string name="icon_confirm_password">confirm password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="or_sign_up_with">Or Sign Up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>

    <!--String for Scan Result Page-->
    <string name="post_date">Post Date</string>
    <string name="scan_result">Hasil Pemindaian</string>
    <string name="diagnoses">Diagnosa</string>
    <string name="diagnoses_description">Diagnoses Description</string>
    <string name="treatment_recommendations">Rekomendasi Pengobatan</string>


    <string name="drug_name">Medicine Name</string>
    <string name="drug_description">Drugs Description</string>
    <string name="search">Search</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="scan_your_pet_wo">Scan Your Pet\'s Eye</string>
    <string name="take_picture">Take picture</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="bookmark_icon">Bookmark Icon</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="log_out_icon">Log Out Icon</string>
    <string name="log_out">Log Out</string>
    <string name="theme">Theme</string>
    <string name="dark_mode_icon">Dark Mode Icon</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="open_galery">Open Galery</string>
    <string name="no_result_found">No Result Found</string>
    <string name="create_email">Create Email</string>
    <string name="title_welcome_page">Selamat Datang di Pawcheck</string>
    <string name="signup">Sign Up</string>
    <string name="message_welcome_page">Mari jaga kesehatan anabul Anda bersama kami!</string>
    <string name="unknown_error">An unexpected error occurred</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="password_required">Password is required</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="login_credentials_message">You can now log in with your credentials.</string>
    <string name="registration_failed">Registration failed</string>
    <string name="ok">OK</string>
    <string name="success_login_default">Login berhasil</string>
    <string name="error_login_failed">Login gagal. Silakan coba lagi.</string>

    <string name="unknown_user">Unknown User</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Mulai">Mulai</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="back_to_home">Tampilan Utama</string>
    <string name="note">Catatan: Kunjungi dokter hewan terdekat untuk mendapatkan perawatan yang maksimal.</string>
    <string name="treatement_recomendation">Treatement Recomendation</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting_button">Setting button</string>
    <string name="username">Username</string>
    <string name="search_icon">Search Icon</string>


</resources>